# hiaac-librep

./: .gitignore  README.md  dimal.ipynb  pyproject.toml  test.py  test_array.py  viz_tools.ipynb
explore_framework/: explore.ipynb
src/librep/base/: __init__.py  estimator.py  transform.py
src/librep/config/: type_definitions.py
src/librep/datasets/har/: kuhar.py  loaders.py  motionsense.py
src/librep/datasets/multimodal/: __init__.py  multimodal.py  operations.py  transformer.py
src/librep/estimators/: convaelstm.py  dimal.py
src/librep/estimators/ae/torch/models/topological_ae/: model_submodules.py  topological_ae.py  topological_signature_distance.py
src/librep/estimators/dimal/: FPS_Single_Display.py  Functions_ManifoldLearning.py  MDSNet_3D.py  Test.ipynb  myFunctions.py
src/librep/estimators/models/: convaelstm.py  convaelstm_modules.py  motionsense_(60, 6)_60_256_[1, 2, 3]_0.77_300_10_0.77_simclr.pth
src/librep/estimators/simclr/torch/: Untitled.ipynb  dataset_simclr.py  generate_script.ipynb  sensor_data_transformer.py  simclr.py  simclr_estimator.py  simclr_eval_models.py  simclr_full_estimator.py  simclr_full_fusion_estimator.py  simclr_linear_estimator.py  simclr_utils.py  standartized_balanced.py  test.ipynb  test_basic_models.ipynb  test_custom_models-Copy1.ipynb  test_custom_models.ipynb  test_transform_simclr_full.ipynb  test_transform_simclr_linear.ipynb
src/librep/estimators/simclr/torch/models/: full_classifier.py  linear_model.py  linear_model_freeze.py  linear_model_full.py  linear_model_intermediate.py  model_base.py  model_full.py  simclr_head.py
src/librep/estimators/simclr/torch/trainer_great/runs/Oct18_17-45-18_68d6121c9f33/: events.out.tfevents.1697651118.68d6121c9f33
src/librep/estimators/simclr/torch/trainer_great/runs/Oct18_17-49-16_68d6121c9f33/: events.out.tfevents.1697651356.68d6121c9f33
src/librep/metrics/: dimred_evaluator.py  report.py
src/librep/reducers/: convaelstm.py
src/librep/transforms/: __init__.py  convaelstm.py  dimal.py  fft.py  lstm.py  masked_ae.py  pca.py  resampler.py  reshaper.py  simclr.py  simclr_full.py  simclr_linear.py  spectrogram.py  topo_ae.py  topo_ae_model copy.py  topo_ae_model.py  topo_ae_remade.py
src/librep/utils/: file_ops.py  workflow.py
src/librep/utils/visualization/: multimodal_har.py
src/librep/xai/: xai.py
tests/: test_simple_imports.py
tests/librep/datasets/har/: test_loaders.py
tests/librep/datasets/multimodal/: test_multimodal_array.py  test_multimodal_dataframe.py
