[build-system]
requires      = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "librep"
version = "0.0.3-dev"
description = "HIAAC-M4 representation learning framework"
readme = "README.md"
authors = [{name = "Otavio Napoli", email = "otavio.napoli@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["librep", "representation learning", "machine learning"]
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "umap-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "pyDRMetrics",
    "gdown",
]

[project.optional-dependencies]
docs = [
    "black",
    "isort",
    "ipython",
    "sphinx",
    "sphinx-autoapi",
    "sphinx_rtd_theme",
    "nbsphinx",
    "pandoc",
    "Ipython",
    "toml"
]

dev = [
    "mock",
    "pytest",
    "black",
    "isort"
]

deep-learning = [
    "torch",
    "torchaudio"
]

[project.urls]
"Homepage" = "https://github.com/discovery-unicamp/hiaac-librep"
"Bug Tracker" = "https://github.com/discovery-unicamp/hiaac-librep/issues"
